@@ -3,10 +3,10 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- fold functionality of drag and drop plugin
+- backup time distance setting
+- {{{foo}}}\n{{{bar}}}; put cursor at start, enter
 - chunk cache state during a buffer event is too fragile, unnecessary
 invalidation being performed
-- block caret: left to 1 position
 - quicknotepad help needs to be generated
 - macos international keys
 - plugin mgr UI - kill modal dialog
